--- a/try_django/src/blog/templates/blog/modal.html
+++ b/try_django/src/blog/templates/blog/modal.html
@@ -2,11 +2,11 @@
 
 {% block content %}
 
-<h1>Create new blog post</h1>
+<h1>New Modal</h1>
 
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
-    Ingreso Nuevo IoC
+    Launch demo modal
   </button>
   
   <!-- Modal -->
@@ -14,7 +14,7 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalCenterTitle">Ingreso Nuevo IoC</h5>
+          <h5 class="modal-title" id="exampleModalCenterTitle">Modal title</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
